--- a/ponderada-2/src/mapping/package.xml
+++ b/ponderada-2/src/mapping/package.xml
@@ -7,12 +7,15 @@
   <maintainer email="gustavo.oliveira@sou.inteli.edu.br">gustavo</maintainer>
   <license>TODO: License declaration</license>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
+ <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <depend>turtlebot3_cartographer</depend>
+  <depend>turtlebot3_teleop</depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
